# vyra_module_template

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile_humble_old  LICENSE  Makefile  README.md  _old_Dockerfile_ohne_sros  copier.yml  docker-compose.yml  gunicorn.conf  gunicorn.py  nginx.conf  pyproject.toml  pytest.ini  ros_entrypoint.sh  ruff.toml  vyra_entrypoint.sh
.module/: module_data.yaml  module_params.yaml  pre-install.sh  requirements.txt  system-packages.txt
config/: core_logging.json  cyclonedds.xml  nginx.conf  ros2_logging.json  sros2_policy_dynamic.xml  sros2_policy_static.xml  uvicorn_logging.json
docs/: BACKEND_WEBSERVER_ARCHITECTURE.md  BUILD_SYSTEM.md  CONTAINER_INJECTION_MIGRATION.md  DEPENDENCY_INSTALLATION.md  ENVIRONMENT_CONFIGURATION.md  ENVIRONMENT_VARIABLES.md  FRONTEND_README.md  GIT_TAG_UPSTREAM_GUIDE-md  MODULE_REPOSITORY.md  NGINX_INTEGRATION.md  README.md  REGISTRATION_PROCESS.md  REST_API_CLIENT_ARCHITECTURE.md  SLIM_MODE.md  SROS2_Authentification_Process.md  SSL_CERTIFICATE_MANAGEMENT.md  registration_process.md  setting_template_as_upstream.md
examples/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
install/: local_setup.sh  setup.sh
log/: latest_build
redis-data/: dump.rdb
src/: asgi.py  wsgi.py
src/mm_dynamic_interfaces/: CMakeLists.txt  package.xml
src/vos_module_template/: README.md  package.bak.xml  package.xml  setup.cfg  setup.py
src/vos_module_template/vos_module_template/: Template.py
src/vyra_module_interfaces/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/vyra_module_interfaces/config/: base_metadata.config  base_metadata.json  db_config.ini
src/vyra_module_interfaces/log/: latest_list
src/vyra_module_interfaces/msg/: ErrorFeed.msg  NewsFeed.msg  StateFeed.msg  VolatileHash.msg  VolatileList.msg  VolatileSet.msg  VolatileString.msg
src/vyra_module_interfaces/srv/: GetCapabilities.srv  HealthCheck.srv  RequestAcess.srv  StartUp.srv  TriggerTransition.srv
src/vyra_module_interfaces/vos_module_interfaces/: __init__.py
src/vyra_module_template/: README.md  package.xml  setup.bak.py  setup.cfg  setup.py  setup.py.bak
src/vyra_module_template/resource/: module_config.yaml  storage_config.ini
src/vyra_module_template/vos_module_template/: Core.py
src/vyra_module_template/vyra_module_template/: Core.py  Interface.py  ModuleAccess.py  Template.py  _Base_.py  _base_.py  container_injection.py  interface.py  logging_config.py  main.py  taskmanager.py
src/vyra_module_template/vyra_module_template/application/: application.py
src/vyra_module_template/vyra_module_template/application/rest_api/: main_rest.py  minimal_rest.py
src/vyra_module_template/vyra_module_template/backend_webserver/: asgi.py  main_rest.py
src/vyra_module_template/vyra_module_template/backend_webserver/core/: config.py
src/vyra_module_template/vyra_module_template/plugin/: registry.py
src/vyra_module_template/vyra_module_template/plugin/_dummy_plugin/: plugin.yaml
src/vyra_module_template/vyra_module_template/status/: README.md  __init__.py  service_client.py  status_manager.py  status_types.py
src/vyra_module_template/vyra_module_template/user/: __init__.py  internal_usermanager.py  tb_users.py  usermanager.py  usermanager_grpc_server.py
src/{{ module_name }}/: README.md  alembic.ini  package.xml  setup.cfg
src/{{ module_name }}/{{ module_name }}/: __init__.py  _base_.py  container_injection.py  interface.py  logging_config.py  main.py  taskmanager.py
src/{{ module_name }}/{{ module_name }}/application/: application.py
src/{{ module_name }}/{{ module_name }}/backend_webserver/: __init__.py  asgi.py  main_rest.py
src/{{ module_name }}/{{ module_name }}/backend_webserver/auth/: __init__.py  auth_service.py  router.py
src/{{ module_name }}/{{ module_name }}/backend_webserver/clients/: __init__.py
src/{{ module_name }}/{{ module_name }}/backend_webserver/clients/grpc/: __init__.py
src/{{ module_name }}/{{ module_name }}/backend_webserver/clients/http/: __init__.py  base_client.py  hardware.py  module_http.py
src/{{ module_name }}/{{ module_name }}/backend_webserver/core/: config.py  dependencies.py
src/{{ module_name }}/{{ module_name }}/backend_webserver/plugin/: __init__.py  models.py  router.py
src/{{ module_name }}/{{ module_name }}/backend_webserver/services/: feed_manager.py  feed_streamer.py  operation_tracker.py  plugin_bridge.py  redis_service.py
src/{{ module_name }}/{{ module_name }}/backend_webserver/websocket/: router.py  service.py
src/{{ module_name }}/{{ module_name }}/plugin/: __init__.py  plugin_client.py  plugin_gateway.py  registry.py
src/{{ module_name }}/{{ module_name }}/plugin/_dummy_plugin/: my_plugin.py
src/{{ module_name }}/{{ module_name }}/state/: __init__.py  state_manager.py
src/{{ module_name }}/{{ module_name }}/user/: README.md  __init__.py  internal_usermanager.py  tb_users.py  usermanager.py  usermanager_client.py  usermanager_detector.py  usermanager_grpc_server.py
storage/: vyra_module_template.sqlite  vyra_module_template_default.sqlite
tests/: README.md
tools/: README.md  build_frontend.sh  bump_template_version.sh  call_trigger_transition.sh  check_dev_server.sh  cleanup_thread_logs.sh  cleanup_zombie_processes.sh  create_docker_network.sh  create_ssl_certificates.sh  create_webserver_auth.sh  debug_executables.sh  generate_grpc_protos.py  generate_sros2_policy.py  hot_reload.py  publish_to_repo.sh  rename_module.sh  restart_dev_server.sh  ros2_hot_reload.py  setup_interfaces.py  setup_proto_interfaces.py  setup_ros_global.sh  start_hot_reload.sh  startup_core.sh  startup_module.sh  startup_ros2_core.sh  startup_ros2_node.sh  update_manifest.py  update_ros.sh  vyra_entrypoint_runtime.sh
vyra_base_image/: Dockerfile  requirements.txt  rotate_logs.sh  supervisord.conf
wheels/: vos_base-0.1.5-py3-none-any.whl  vyra_base-0.1.5-py3-none-any.whl  vyra_base-0.1.8+build.102-py3-none-any.whl  vyra_base-0.1.8+build.104-py3-none-any.whl  vyra_base-0.1.8+build.108-py3-none-any.whl  (+41 more)
(+569 files in other folders)
