
[tool.vyra]
module_name = "vyra_module_template"
module_template = "basic"
module_description = "This template could be used to create a vyra module with basic functionality."
module_links = [
    { name = "Vyra-Documentation", url = "https://vyra-entity.github.io/vyra_base_python/" }
]


[tool.poetry]
name = "vyra-module-template"
version = "0.1.0"
description = ""
authors = ["HolgDer <vyra.0a1@gmail.com>"]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.10, <4"

[tool.poetry.dependencies]
python = ">=3.10,<4"
setuptools = ">=65.5.1"
flask = "^3.0.0"
gunicorn = "^23.0.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
