<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mm_dynamic_interfaces</name>
  <version>0.0.0</version>
  <description>Dynamic package interface for external modules</description>
  <maintainer email="vyra.0a1@gmail.com">V.Y.R.A.</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
