<?xml version='1.0' encoding='utf-8'?>
<package format="3">
	<name>vos_module_template</name>
	<version>0.1.0</version>
	<description>TODO: Package description</description>
	<maintainer email="h.schernewski@variobotic.de">holgder</maintainer>
	<license>TODO: License declaration</license>
	<test_depend>ament_copyright</test_depend>
	<test_depend>ament_flake8</test_depend>
	<test_depend>ament_pep257</test_depend>
	<test_depend>python3-pytest</test_depend>

	<depend>vos_module_interfaces</depend>

	<export>
		<build_type>ament_python</build_type>
	</export>
	<exec_depend>rclpy</exec_depend>
	<exec_depend>rosidl_default_runtime</exec_depend>

</package>