<?xml version='1.0' encoding='utf-8'?>
<package format="3">
	<name>vyra_module_interfaces</name>
	<version>0.1.0</version>
	<description>Python interfaces and helper modules for V.Y.R.A. modules.</description>
	<maintainer email="vyra.0a1@gmail.com">HolgDer</maintainer>
	<license>Apache-2.0</license>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<exec_depend>rclpy</exec_depend>
	<exec_depend>python3</exec_depend>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
	<member_of_group>rosidl_interface_packages</member_of_group>
	<depend>unique_identifier_msgs</depend>
	<exec_depend>rosidl_default_runtime</exec_depend>
	<build_depend>builtin_interfaces</build_depend>
	<build_depend>rosidl_default_generators</build_depend>
</package>