[metadata]
name = vyra_module_template
version = 0.1.0
description = TODO: Package description
author = H. Schernewski
author_email = vyra.0a1@gmail.com
license = OWNER

[develop]
script_dir=$base/lib/vyra_module_template

[install]
install_scripts=$base/lib/vyra_module_template

[options]
packages =
    vyra_module_template
    vyra_module_template.application
    vyra_module_template.domain
    vyra_module_template.plugin
install_requires =
    setuptools>=80
    vyra_base>=0.1.0
    vyra_module_template_interfaces>=0.1.0
zip_safe = true
include_package_data = true

[options.extras_require]
test = pytest

[options.package_data]
* = resource/*, package.xml

[options.data_files]
share/vyra_module_template = resource/vyra_module_template, package.xml
share/vyra_module_template/resource = resource/*
share/ament_index/resource_index/packages = resource/vyra_module_template

[options.entry_points]
console_scripts =
    core = vyra_module_template.main:main