[metadata]
name = {{ module_name }}
version = 0.1.0
description = TODO: Package description
author = H. Schernewski
author_email = vyra.0a1@gmail.com
license = OWNER

[develop]
script_dir=$base/lib/{{ module_name }}

[install]
install_scripts=$base/lib/{{ module_name }}

[options]
packages =
    {{ module_name }}
    {{ module_name }}.application
    {{ module_name }}.domain
    {{ module_name }}.plugin
install_requires =
    setuptools>=80
    vyra_base>=0.1.0
    {{ module_name }}_interfaces>=0.1.0
zip_safe = true
include_package_data = true

[options.extras_require]
test = pytest

[options.package_data]
* = resource/*, package.xml

[options.data_files]
share/{{ module_name }} = resource/{{ module_name }}, package.xml
share/{{ module_name }}/resource = resource/*
share/ament_index/resource_index/packages = resource/{{ module_name }}

[options.entry_points]
console_scripts =
    core = {{ module_name }}.main:main